# gemini_key_manager

./: LICENSE  README.md  pyproject.toml
src/: adapter.py  client.py  example.py
src/gemini_key_manager/: adapter.py  client.py  config.py  example.py  exceptions.py  models.py
