[tool.poetry]
name = "gemini-key-manager"
version = "0.1.0"
description = "A resilient Gemini API key manager with failover and scheduling."
authors = ["Crapteep"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-genai = "^1.42.0"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
