[tool.poetry]
name = "gemini_key_manager"
version = "0.1.0"
description = "A resilient Gemini API key manager with failover and scheduling."
authors = ["Crapteep"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gemini_key_manager", from = "src" }]



[tool.poetry.dependencies]
python = "^3.12"
google-genai = "^1.42.0"
pydantic = "^2.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
